# Frontline

./: README.md  RULES.md
backend/elevenlabs-service/: server.js
backend/gemini/: .env.example
backend/gemini-service/: .env.example  .gitignore  ENDPOINT.md  README.md  package-lock.json  package.json  server.js
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: HowItWorksModal.jsx  IncidentReport.jsx
presage-engine/: .gitignore  API.md  BUILD.md  CMakeLists.txt  Dockerfile  IDE_NOTES.md  QUICKSTART.md  README.md  docker-compose.yml  hello_vitals.cpp  main.cpp  start-server.sh
presage-engine/libs/: .gitkeep
